Fix various bugs. UI testing mainly done. Unit tests OK. Added Harmony unit tests.